// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTableRow matches expand snapshot 1`] = `
<tr
  className="selected"
  key="187-3206"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <td
    className="item-checkbox"
    key="checkbox-control"
    onClick={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="fa fa-square-o fa-sm table-icon"
    />
     
  </td>
  <td
    className="arrow-indicator"
    key="expand-control"
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="fa fa-chevron-down fa-sm table-icon"
    />
  </td>
  <td
    className="item"
    key="item-187-3206"
  >
    <span
      key="item"
    >
      <span>
        3206
      </span>
    </span>
  </td>
  <td
    className="subject"
    key="subject-187-3206"
  >
    <span
      key="subject"
    >
      <span
        className="table-subject-highlight math"
      >
        Math
      </span>
    </span>
  </td>
  <td
    className="grade"
    key="grade-187-3206"
  >
    <span
      key="grade"
    >
      <span>
        Grade 6
      </span>
    </span>
  </td>
  <td
    className="claimAndTarget"
    key="claimAndTarget-187-3206"
  >
    <span
      key="claim"
    >
      <span>
        Concepts and Procedures
      </span>
    </span>
    <span
      key="target"
    >
      <ToolTip
        className="box"
        displayIcon={false}
        helpText={
          <p>
            Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia
          </p>
        }
        position="bottom"
      >
        A
      </ToolTip>
    </span>
  </td>
  <td
    className="item-type"
    key="item-type-187-3206"
  >
    <span
      key="item-type"
    >
      <span>
        Equation
      </span>
    </span>
  </td>
</tr>
`;

exports[`ItemTableRow matches snapshot 1`] = `
<table>
  <tbody>
    <ItemTableRow
      columns={
        Array [
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "item",
              },
            ],
            "compare": [Function],
            "header": "Item",
            "headerClassName": "item",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "subject",
              },
            ],
            "compare": [Function],
            "header": "Subject",
            "headerClassName": "subject",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "grade",
              },
            ],
            "compare": [Function],
            "header": "Grade",
            "headerClassName": "grade",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "claim",
              },
              Object {
                "accessor": [Function],
                "className": "target",
                "helpText": [Function],
              },
            ],
            "compare": [Function],
            "header": "Claim/Target",
            "headerClassName": "claimAndTarget",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "item-type",
              },
            ],
            "compare": [Function],
            "header": "Item Type",
            "headerClassName": "item-type",
          },
        ]
      }
      hasControls={true}
      isExpanded={false}
      onRowExpand={[MockFunction]}
      onRowSelect={[MockFunction]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": true,
          "claimCode": "MATH1",
          "claimLabel": "Concepts and Procedures",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "EQ",
          "interactionTypeLabel": "Equation",
          "isPerformanceItem": true,
          "itemKey": 3206,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia",
          "targetHash": 100,
          "targetId": "A",
          "targetShortName": "",
          "title": "Math Grade 6 Claim 1",
        }
      }
    >
      <tr
        className=""
        key="187-3206"
        onClick={[Function]}
        onKeyUp={[Function]}
      >
        <td
          className="item-checkbox"
          key="checkbox-control"
          onClick={[Function]}
          onKeyUp={[Function]}
          tabIndex={0}
        >
          <i
            aria-hidden="true"
            className="fa fa-square-o fa-sm table-icon"
          />
           
        </td>
        <td
          className="arrow-indicator"
          key="expand-control"
          tabIndex={0}
        >
          <i
            aria-hidden="true"
            className="fa fa-chevron-right fa-sm table-icon"
          />
        </td>
        <td
          className="item"
          key="item-187-3206"
        >
          <span
            key="item"
          >
            <span>
              3206
            </span>
          </span>
        </td>
        <td
          className="subject"
          key="subject-187-3206"
        >
          <span
            key="subject"
          >
            <span
              className="table-subject-highlight math"
            >
              Math
            </span>
          </span>
        </td>
        <td
          className="grade"
          key="grade-187-3206"
        >
          <span
            key="grade"
          >
            <span>
              Grade 6
            </span>
          </span>
        </td>
        <td
          className="claimAndTarget"
          key="claimAndTarget-187-3206"
        >
          <span
            key="claim"
          >
            <span>
              Concepts and Procedures
            </span>
          </span>
          <span
            key="target"
          >
            <ToolTip
              className="box"
              displayIcon={false}
              helpText={
                <p>
                  Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia
                </p>
              }
              position="bottom"
            >
              <span
                className="tool-tip-links box"
                tabIndex={0}
              >
                <span
                  className="tool-tip-hoverable"
                >
                  A
                   
                </span>
                <span
                  className="tool-tip-details"
                >
                  <span
                    className="tool-tip-message bottom undefined"
                  >
                    <p>
                      Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia
                    </p>
                  </span>
                </span>
              </span>
            </ToolTip>
          </span>
        </td>
        <td
          className="item-type"
          key="item-type-187-3206"
        >
          <span
            key="item-type"
          >
            <span>
              Equation
            </span>
          </span>
        </td>
      </tr>
    </ItemTableRow>
  </tbody>
</table>
`;
